--- a/module_01.qmd
+++ b/module_01.qmd
@@ -1,12 +1,13 @@
 ---
-title: "Insecticide treated nets""
+title: "Insecticide treated nets"
+subtitle: "MACEPA Data Fellowship - Training Materials"
 ---
 
-Insecticide-treated bed nets (ITNs) are a form of personal protection that can reduce the risk of malaria illness, severe disease, and death. In community-wide trials in several African settings, ITNs reduced the death of children under 5 years from all causes by about 20%. ITNs repel, kill, or sterilize mosquitoes that come into contact with the insecticides or other active ingredients impregnated on the netting material. ITNs also have a community effect where members of the community (not just those who sleep under a net) may have some protection when a large proportion of the community uses ITNs. The effectiveness of ITNs can diminish over time due to physical damage, deteriorating chemical integrity, or deteriorating bio-efficacy (i.e. through the development of insecticide resistance).  Long-lasting insecticidal net (LLIN) is a special type of ITN that stays effective for a longer time (\~ 3 years) before replacement, without a need for reimpregnation with insecticide. 
+Insecticide-treated bed nets (ITNs) are a form of personal protection that can reduce the risk of malaria illness, severe disease, and death. In community-wide trials in several African settings, ITNs reduced the death of children under 5 years from all causes by about 20%. ITNs repel, kill, or sterilize mosquitoes that come into contact with the insecticides or other active ingredients impregnated on the netting material. ITNs also have a community effect where members of the community (not just those who sleep under a net) may have some protection when a large proportion of the community uses ITNs. The effectiveness of ITNs diminishes over time due to physical damage, deteriorating chemical integrity, or bio-efficacy (i.e., through the development of insecticide resistance).  Long-lasting insecticidal net (LLIN) is a special type of ITN that stays effective for a longer time (\~ 3 years) before replacement, without a need for reimpregnation with insecticide. 
 
 # **ITN distribution data**
 
-For more than two decades, ITNs and LLINs have been delivered to malaria-endemic countries through various global, regional, and national initiatives and programs. National Malaria Control Programs (NMCPs) in endemic countries coordinate the distribution of ITNs and LLINs among target populations.  In most countries, ITN distributions are carried out in two formats:
+For seceral decades, ITNs and LLINs have been delivered to malaria-endemic countries through various global or local initiatives and programs. National Malaria Control Programs (NMCPs) in endemic countries coordinate the distribution of bed nets to target populations.  In most countries, ITN distributions are mainly carried out in two formats:
 
 -   **Mass ITN campaign**: is a cost-effective way of rapidly achieving high and equitable vector control coverages. ITN campaigns are done once every few years targeting all or a cohort of population at each round (usually districts but can be at lower administrative units too), They aim to provide a proportion of the population in the target districts with new ITNs at a regular interval (ideally every 3 years).
 
@@ -42,29 +43,35 @@ The following script does that by (a) converting the datasets into long format (
 
 ```{r}
 ### convert mass LLIN data into long format
-mass_llin_long<- mass_llin_dist %>%
-  pivot_longer(cols = contains("llin"), names_to = "year_txt", values_to = "llin") %>%
-  mutate(year = as.numeric(substr(year_txt,6,9))) %>%
+mass_llin_long<- 
+  mass_llin_dist |>
+  pivot_longer(cols = contains("llin"),
+               names_to = "year_txt", 
+               values_to = "llin") |>
+  mutate(year = as.numeric(substr(year_txt,6,9))) |>
   dplyr::select(-year_txt)
 
 ### convert population data into long format
-population_long<- population %>%
-  pivot_longer(cols = contains("pop"), names_to = "year_txt", values_to = "pop") %>%
-  mutate(year = as.numeric(substr(year_txt,5,8))) %>%
+population_long<- population |>
+  pivot_longer(cols = contains("pop"),
+               names_to = "year_txt",
+               values_to = "pop")|>
+  mutate(year = as.numeric(substr(year_txt,5,8))) |>
   dplyr::select(-year_txt)
 
 ### join the two and generate llin per person
-mLlin_pop = mass_llin_long %>%
-  left_join(population_long, by = c("region",
-                                    "zone",
-                                    "district",
-                                    "year")) %>%
-  mutate(llin_per_person  = llin/pop)
+  mllin_pop = mass_llin_long |>
+  left_join(population_long,
+            by = c("region",
+                   "zone",
+                   "district",
+                   "year")) |>
+    mutate(llin_per_person  = llin/pop)
 
 
 ### visualize
-mllin_pop%>% 
-    filter(llin_per_person>0) %>%
+mllin_pop|> 
+    filter(llin_per_person>0) |>
     ggplot(aes(x=year, y = llin_per_person)) +
     facet_wrap (~ paste0(region, "-", zone, "-", district)) +
     geom_point()
@@ -107,33 +114,40 @@ The following script does that by (a) converting the datasets into long format (
 
 ```{r}
 ### convert routine LLIN data into long format
-routine_llin_long<- routine_llin_dist %>%
-  pivot_longer(cols = contains("llin"), names_to = "program", values_to = "llin")
+routine_llin_long<- routine_llin_dist |>
+  pivot_longer(cols = contains("llin"),
+               names_to = "program",
+               values_to = "llin")
 
 ### convert population data into long format
-population_long<- population %>%
-  pivot_longer(cols = contains("pop"), names_to = "year_txt", values_to = "pop") %>%
-  mutate(year = as.numeric(substr(year_txt,5,8))) %>%
+population_long<- population |>
+  pivot_longer(cols = contains("pop"),
+               names_to = "year_txt", 
+               values_to = "pop") |>
+  mutate(year = as.numeric(substr(year_txt,5,8))) |>
   dplyr::select(-year_txt)
 
 
 ### join the two and generate llin per person
 
-rllin_pop <-   routine_llin_long %>%
-  left_join(population_long, by = c("region",
-                                    "zone",
-                                    "district",
-                                    "year")) %>%
-  group_by(region, zone, district, year) %>%
+rllin_pop <-   routine_llin_long |>
+  left_join(population_long,
+            by = c("region",
+                   "zone",
+                   "district",
+                   "year")) |>
+  group_by(region, zone, district, year) |>
   summarise(rllin = sum(llin, na.rm=T),
-            population = mean(pop)) %>%
-  ungroup() %>%
+            population = mean(pop)) |>
+  ungroup() |>
   mutate(llin_per_u5  = rllin/population * 5)  # assuming U5 a fifth of pop.
 
 ## visualize
-rllin_pop%>% 
-  ggplot(aes(x=year, y = llin_per_u5)) +
-  facet_wrap (~ paste0(region, "-", zone, "-", district)) +
+rllin_pop|> 
+  ggplot(aes(x=year, 
+             y = llin_per_u5)) +
+  facet_wrap (~ paste0(region, "-", 
+                       zone, "-", district)) +
   geom_point()
   
  ggsave(filename = "plots/llin_routine.tiff",
@@ -153,15 +167,17 @@ Following LLIN distributions LLIN access as a result of the distribution in the 
 
 ```{r}
 ### increment to the proportion with access to LLIN
-llin_access<- mllin_pop %>%
-  left_join(rllin_pop, by = c("region", "zone", "district", "year")) %>%
-  mutate(total_llin = llin + rllin) %>%
-  mutate(llin_per_person = total_llin/population) %>%
-  mutate(inc_prop_access = llin_per_person*1.8) %>%
-  dplyr::select(region, zone, district, year, total_llin, llin_per_person, inc_prop_access)
+llin_access<- mllin_pop |>
+  left_join(rllin_pop,
+            by = c("region", "zone", "district", "year")) |>
+  mutate(total_llin = llin + rllin) |>
+  mutate(llin_per_person = total_llin/population) |>
+  mutate(inc_prop_access = llin_per_person*1.8) |>
+  dplyr::select(region, zone, district, year, total_llin, llin_per_person,
+                inc_prop_access)
 
 ## visualize
-llin_access%>% 
+llin_access|> 
   ggplot(aes(x=year, y = inc_prop_access)) +
   facet_wrap (~ paste0(region, "-", zone, "-", district)) +
   geom_point()
@@ -171,7 +187,7 @@ ggsave(filename = "plots/llin_access_increment.tiff",
 
 ```
 
-Since access to LLIN is given in percentages, we can assume a maximum of 1, and districts with values beyond that may be flagged for further data checking.  
+Since access to LLIN is given in percentages, we can assume a maximum of 1, and districts with values beyond that may be flagged for further checking of their data.  
 
 ![](plots/image_01.png){fig-align="left"}
 
